--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ PORT=3000
 #app hostname
 HOST_NAME=localhost
 
-DB_HOST=localhost
-DB_PORT=3307
+DB_HOST=127.0.0.1
+DB_PORT=3306
 DB_USER=root
-DB_PASSWORD=123456
+DB_PASSWORD=
 DB_NAME=nodejs
