--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "Nguyen Van Quan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "dotenv": "16.0.3",
     "ejs": "3.1.8",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
