--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "ejs": "3.1.8",
     "express": "^4.21.1",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.11.3"
+    "mysql2": "^3.11.3",
+    "sequelize": "^6.37.4"
   },
   "devDependencies": {
     "nodemon": "2.0.20"
