--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
   "author": "Nguyen Van Quan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "dotenv": "16.0.3",
     "ejs": "3.1.8",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
     "sequelize": "^6.37.4"
